--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,9 +3,9 @@
 }
 
 .bg-shadow {
-  -webkit-box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, 0.43);
-  -moz-box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, 0.43);
-  box-shadow: 5px 5px 3px 0px rgba(0, 0, 0, 0.43);
+  -webkit-box-shadow: 0px 3px 2px 3px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 3px 2px 3px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 3px 2px 3px rgba(0, 0, 0, 0.4);
 }
 
 .cluster-diagram {
@@ -65,11 +65,19 @@
 }
 
 .cluster-chart-block::-webkit-scrollbar {
-    width: 0.3em;
-    background-color: transparent;
+  width: 0.3em;
+  background-color: transparent;
 }
 
 .cluster-chart-block::-webkit-scrollbar-thumb {
   background-color: gray;
   border-radius: 20px;
+}
+
+.full-text-block {
+  background-color: peachpuff;
+  max-height: 460px;
+  border-radius: 30px;
+  padding: 30px;
+  overflow-y: auto;
 }
