--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -35,6 +35,7 @@
 }
 
 .cluster-item {
+  width: 120px;
   border-radius: 20px;
   padding: 2px 15px 2px 5px;
   background-color: tomato;
@@ -80,4 +81,12 @@
   border-radius: 30px;
   padding: 30px;
   overflow-y: auto;
+}
+
+.big-rounded {
+  border-radius: 20px;
+}
+
+.small-rounded {
+  border-radius: 10px;
 }
