--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -77,7 +77,7 @@
 
 .full-text-block {
   background-color: peachpuff;
-  max-height: 460px;
+  max-height: 400px;
   border-radius: 30px;
   padding: 30px;
   overflow-y: auto;
@@ -89,4 +89,8 @@
 
 .small-rounded {
   border-radius: 10px;
+}
+
+.chart-text {
+  height: 55px;
 }
