--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -76,7 +76,7 @@
 }
 
 .full-text-block {
-  background-color: peachpuff;
+  background-color: #fcd7da;
   max-height: 400px;
   border-radius: 30px;
   padding: 30px;
@@ -94,3 +94,45 @@
 .chart-text {
   height: 55px;
 }
+
+.chart-detailed-first-left {
+  background-color: #59a0dd;
+  color: white;
+  font-weight: bold;
+}
+
+.chart-detailed-first-right {
+  background-color: #f0808b;
+  color: white;
+  font-weight: bold;
+}
+
+.chart-detailed-left {
+  background-color: #d2e7f9;
+}
+
+.chart-detailed-right {
+  background-color: #fcd7da;
+}
+
+.chart-item-1 {
+  background-color: #e4566f;
+}
+
+.chart-item-2 {
+  background-color: #ff9bad;
+}
+
+.chart-item-3 {
+  background-color: #fff0f3;
+}
+
+.chart-item-4 {
+  background-color: #addaff;
+}
+
+.chart-item-4 {
+  background-color: #20a9d2;
+}
+
+
